@startuml dreams
skinparam classAttributeIconSize 0

package Dreams #DDDDDD {

    + class Cliente {
    - nombre: String
    - email: String
    
    + getNombre(): String
    + getEmail(): String
    }

    class Venta {
    - cliente: Cliente
    - items: List<ItemVenta>
    - total: double

    + agregarProducto(producto: Producto, cantidad: int): void
    # calcularTotal(): void
    + mostrarFactura(): void
    }

    class ItemVenta {
    - producto: Producto
    - cantidad: int
    
    + getSubtotal(): double
    + getProducto(): Producto
    }

    class Producto {
    - nombre: String
    - precio: double
    - categoria: String
    - stock: int

    + mostrarDetalles(): void
    # actualizarStock(cantidad: int): boolean
    }

    class VentaTest {
    - {static} venta: Venta
    - {static} cliente: Cliente
    - {static} productos: List<Producto>
    
    + {static} inicializarDatos(): void
    + {static} crearVentaSimple(): void
    + {static} crearVentaMultipleProductos(): void
    + {static} probarVentaSinCliente(): void
    - {static} generarProductosPrueba(): void
    # {static} validarVenta(Venta venta): boolean

}

Cliente "0..1" -- "0..*" Venta
Venta "1" *-- "1..*" ItemVenta
ItemVenta "1" -- "1" Producto

VentaTest ..> Venta
VentaTest ..> Cliente
VentaTest ..> Producto

@enduml